2004-12-17  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/sparc/sparc64/fpu/libm-test-ulps: Update.

2004-12-17  Andreas Jaeger  <aj@suse.de>

	* math/libm-test.inc (atan2_test): Compute value with 36 digits.
	* sysdeps/alpha/fpu/libm-test-ulps: Adjust for changed result.
	* sysdeps/powerpc/fpu/libm-test-ulps: Likewise.
	* sysdeps/s390/fpu/libm-test-ulps: Likewise.
	* sysdeps/sparc/sparc32/fpu/libm-test-ulps: Likewise.
	* sysdeps/sparc/sparc64/fpu/libm-test-ulps: Likewise.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

2004-12-16  Ulrich Drepper  <drepper@redhat.com>

	* stdlib/tst-setcontext.c: Enlarge st1 and st2 arrays.

2004-09-02  Steven Munroe  <sjmunroe@us.ibm.com>

	[BZ #610]
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/getcontext.S
	(__novec_getcontext): Fix typo in store of fp29.
	(__getcontext): Fix typo in store of fp29.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/swapcontext.S
	(__novec_swapcontext): Fix typo in store of fp29.
	(__swapcontext): Fix typo in store of fp29.

2004-12-17  GOTO Masanori  <gotom@debian.or.jp>

	* sysdeps/unix/sysv/linux/dl-osinfo.h (DL_SYSDEP_OSCHECK): Fix
	vague message.

2004-12-16  Roland McGrath  <roland@redhat.com>

	* nscd/Makefile ($(objpfx)nscd): Don't depend on $(selinux-LIBS),
	which is usually a -lselinux that make will resolve wrongly.

2004-12-16  Andreas Jaeger  <aj@suse.de>

	* math/math.h: Use #if defined to not receive warnings about
	undefined symbols.

2004-12-16  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/sparc/sparc32/clone.S (__clone): Add support
	for NPTL where the PID is stored at userlevel and needs to be reset
	when CLONE_THREAD is not used.

	* sysdeps/unix/sysv/linux/sparc/sparc64/sysdep.h
	(SYSCALL_ERROR_HANDLER): If RTLD_PRIVATE_ERRNO, use rtld_errno
	instead of errno.
	* sysdeps/unix/sysv/linux/sparc/sparc64/socket.S: Include
	sysdep-cancel.h instead of sysdep.h.  Handle cancellation.
	* sysdeps/sparc/sparc64/fpu/libm-test-ulps: Regenerate.
