@@ -11,3 +11,4 @@
 
 MULTIPLE_THREADS_OFFSET		thread_offsetof (header.multiple_threads)
 PID_OFFSET			thread_offsetof (pid)
+TID_OFFSET			thread_offsetof (tid)
